<resources>
    <string name="app_name">AppMan</string>

    <string name="title">TROPOTECH APPS</string>

    <string name="app1">Spotify Streamer</string>
    <string name="app2">Scores</string>
    <string name="app3">Library</string>
    <string name="app4">Build It Bigger</string>
    <string name="app5">XYZ Reader</string>
    <string name="app6">Capstone</string>
    <string name="appClick">place holder for future app</string>

</resources>
